--- a/package.json
+++ b/package.json
@@ -7,18 +7,23 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node src/server.ts"
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
     "lucide-react": "^0.344.0",
+    "puppeteer": "^22.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "xlsx": "^0.18.5",
-    "puppeteer": "^22.3.0"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
