--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "node src/server.ts"
+    "server": "node --loader ts-node/esm src/server.ts"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -18,6 +18,7 @@
     "puppeteer": "^22.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "ts-node": "^10.9.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
